BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/TL_Rank_Criteria_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Account_BMS_CN__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TL Rank Criteria</relationshipLabel>
        <relationshipName>TL_Rank_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apply_TL_To_Medical_Plan_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apply Low-Ranked TL to Medical Plan?</description>
        <label>Apply Low-Ranked TL to Medical Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International1_Green1_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member of Int Guideline Panel ≤2 yrs</description>
        <label>Member of Int Guideline Panel ≤2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International2_Green2_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member of Int Sci Committee ≤2 yrs</description>
        <label>Member of Int Sci Committee ≤2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International3_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Chair/Speaker at Int Sci Meeting</description>
        <label>Chair/Speaker at Int Sci Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International4_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assoc/Prof with Med School affiliation</description>
        <label>Assoc/Prof with Med School affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International5_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key Investigator of Int Clinical Trial</description>
        <label>Key Investigator of Int Clinical Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International7_Green3_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Published in Int Journal ≤2 yrs</description>
        <label>Published in Int Journal ≤2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Justification_for_Approval_BMS_CN__c</fullName>
        <description>Justification for Approval</description>
        <label>Justification for Approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NationalQ1_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of Nat Guideline Panel ≤2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalQ2_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of Nat Sci Committee  ≤2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalQ3_Green1_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Chair/Speaker at Nat Sci Meeting</description>
        <label>Chair/Speaker at Nat Sci Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalQ4_Green2_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assoc/Prof with Med School affiliation</description>
        <label>Assoc/Prof with Med School affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalQ5_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key Investigator of Nat Clinical Trial</description>
        <label>Key Investigator of Nat Clinical Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalQ7_Green3_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Published in Nat Journal ≤3 yrs</description>
        <label>Published in Nat Journal ≤3 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Score_BMS_CN__c</fullName>
        <label>Rank Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalQ1_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recognized Leader of Reg Sci community</description>
        <label>Recognized Leader of Reg Sci community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegionalQ2_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Chair/Leader in Disease Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegionalQ3_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recognized Speaker or Chair (BMS or CME)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_BMS_CN__c</fullName>
        <label>Approval Status for Medical Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Apply for Medical Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply for remove from Medical Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TL_Level_BMS_CN__c</fullName>
        <label>TL Level</label>
        <picklist>
            <picklistValues>
                <fullName>National - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International - 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>TL Rank Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>Rank_Score_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Need_be_approved</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>Rank_Score_BMS_CN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>equals</operation>
            <value>Apply for Medical Plan</value>
        </filters>
        <label>Need be approved</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>TL Rank Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TL Rank Criteria</pluralLabel>
    <recordTypes>
        <fullName>Remove_from_Med_Plan_BMS_CN</fullName>
        <active>true</active>
        <description>Remove from Medical Plan</description>
        <label>Remove from Medical Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Create_Edit</fullName>
        <active>true</active>
        <description>TL Rank Criteria</description>
        <label>TL Rank Criteria Create Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Create_Edit_In</fullName>
        <active>true</active>
        <description>Created for india users</description>
        <label>TL Rank Criteria Create Edit India</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Lock_All</fullName>
        <active>true</active>
        <label>TL Rank Criteria Lock All</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Lock_All_India</fullName>
        <active>true</active>
        <description>TL Rank Criteria Lock All For India</description>
        <label>TL Rank Criteria Lock All India</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Lock_MSM</fullName>
        <active>true</active>
        <label>TL Rank Criteria Lock MSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>TL_Rank_Criteria_Lock_MSM_India</fullName>
        <active>true</active>
        <description>TL Rank Criteria Lock MSM For India</description>
        <label>TL Rank Criteria Lock MSM India</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>